syntax = "proto3";
package soarchain.did;

option go_package = "github.com/amirh39/soarchain-core/x/did/types";

import "gogoproto/gogo.proto";


message ClientDid {
  string id = 1;
  string address = 2;
  string pubKey = 3;
  string type = 4;
  string created = 5;
  string updated = 6;
  repeated DprInfo DprInfos = 7;
}

// Define the DprInfo message that holds id and claimed information
message DprInfo {
  string id = 1;
  string claimed = 2; 
}


