syntax = "proto3";
package soarchain.did;

option java_multiple_files = true;

option go_package = "soarchain/x/did/types";

import "gogoproto/gogo.proto";

// Strings defines a JSON-LD string array format which is marshalled to a single string if the array length is 1.
message Strings {
  repeated string values = 1;
}

message DidDocument {
  Strings contexts = 1 [json_name = "@context", (gogoproto.customtype) = "JSONStringOrStrings"];
  string id = 2;
  Strings controller = 3 [(gogoproto.customtype) = "JSONStringOrStrings"];
  repeated VerificationMethod verificationMethods = 4 [json_name = "verificationMethod"];
  repeated VerificationRelationship authentications = 5 [json_name = "authentication", (gogoproto.customtype) = "VerificationRelationship"];
  repeated VerificationRelationship assertionMethods = 6 [json_name = "assertionMethod", (gogoproto.customtype) = "VerificationRelationship"];
  repeated VerificationRelationship keyAgreements = 7 [json_name = "keyAgreement", (gogoproto.customtype) = "VerificationRelationship"];
  repeated VerificationRelationship capabilityInvocations = 8 [json_name = "capabilityInvocation", (gogoproto.customtype) = "VerificationRelationship"];
  repeated VerificationRelationship capabilityDelegations = 9 [json_name = "capabilityDelegation", (gogoproto.customtype) = "VerificationRelationship"];
  repeated Service services = 10 [json_name = "service"];
  string clientPublicKey = 11;
  string vin = 12;
  bool pidSupportedOneToTwnety = 13;
  bool pidSupportedTwentyOneToForthy = 14;
  bool pidSupportedForthyOneToSixty = 15;
}

// VerificationMethod defines a W3C verification method
message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  string publicKeyBase58 = 4;
}

// VerificationRelationship defines a W3C verification relationship
message VerificationRelationship {
  // VerificationRelationship can be one of a single ID or a VerificationMethod.
  oneof content {
    string verificationMethodId = 1;
    VerificationMethod verificationMethod = 2;
  }
}

// Service defines a service in the W3C Did Document.
message Service {
  string id = 1;
  string type = 2;
  string serviceEndpoint = 3;
}

// DidDocumentWithSeq defines a message for Did Document with a sequence number for preventing replay attacks.
message DidDocumentWithSeq {
  DidDocument document = 1;
  uint64 sequence = 2;
}

// DataWithSeq defines a message for data with a sequence number for preventing replay attacks.
message DataWithSeq {
  bytes data = 1;
  uint64 sequence = 2;
}